app/main.scss
/*
To customize the look and feel of Ionic, you can override the variables
in ionic's _variables.scss file.

For example, you might change some of the default colors:

$light:                           #fff !default;
$stable:                          #f8f8f8 !default;
$positive:                        #387ef5 !default;
$calm:                            #11c1f3 !default;
$balanced:                        #33cd5f !default;
$energized:                       #ffc900 !default;
$assertive:                       #ef473a !default;
$royal:                           #886aea !default;
$dark:                            #444 !default;
*/

// Global variables
$brand-color: #6a38ab;
$new-event-margin-left: 5px;

// The path for our ionicons font files, relative to the built CSS in www/css
//$ionicons-font-path: "../lib/ionic/fonts" !default;

// Include all of Ionic
@import "./ionic/scss/ionic";

// Include each view's scss
@import "./common/intl-phone/intlTelInput";
@import "./login/login";
@import "./verify-phone/verify-phone";
@import "./facebook-sync/facebook-sync";
@import "./set-username/set-username";
@import "./request-push/request-push";
@import "./request-location/request-location";
@import "./request-contacts/request-contacts";
@import "./find-friends/find-friends";
@import "./events/events";
@import "./set-place/set-place";
@import "./invite-friends/invite-friends";
@import "./add-by-username/add-by-username";
@import "./add-from-address-book/add-from-address-book";
@import "./add-from-facebook/add-from-facebook";
@import "./event/event";
@import "./my-friends/my-friends";
@import "./add-friends/add-friends";
@import "./friends/friends";
@import "./guest-list/guest-list";
@import "./added-me/added-me";
@import "./friendship/friendship";
@import "./create-event/create-event";
@import "./tutorial/tutorial";

/*
Global Sass
*/

// Global
body {
  -webkit-font-smoothing: antialiased;
}

// Buttons
.button {
  border-radius: 4px;
}
.button-full {
  border-radius: 0;
}
.buttons-right {
  padding-right: 3px;
}

// Items
.list-avatar {
  .item-divider {
    padding-left: 12px;
  }
}
.item {
  border-color: #eee;
  border-top: none;
  border-left: none;
  border-right: none;
  margin-bottom: 1px;

  .contact-image {
    background-color: #ccc;
    color: #fff;
    padding-top: 14px;
    font-size: 20px;
    font-weight: 500;
  }
  &.item-divider {
    margin-bottom: 0;
  }
  &.last {
    border-bottom-width: 1px !important;
  }
}
.collection-repeat-container {
  & > .item {
    border-bottom-width: 2px;
  }
}
.item-divider {
  text-transform: uppercase;
  background-color: #fff;
  color: $brand-color;
  font-size: 12px;
  border: none;

  &.activated {
    background-color: #fff;
  }
}
.item-avatar {
  & > img:first-child,
  .item-image {
    background-color: #ccc;
    max-width: 50px;
    max-height: 50px;
    top: 11px;
    left: 11px;
  }
}

// Placeholder
.placeholder {
  text-align: center;
  color: $brand-color;
  margin: auto;
  padding-top: 30px;
  max-width: 216px;
  font-size: 16px;
}

// Loading overlay
.loading-text {
  max-width: 160px;
  margin-bottom: 15px;
}
#loading-contacts {
  max-width: none;
}
.loading {
  font-weight: 900;

  .spinner {
    stroke: #fff;
    fill: #fff;
  }
}

// Onboarding
.onboard-view {
  .explanation {
    font-size: 16px;
    color: #fff;
    text-align: center;
    width: 250px;
  }
  input {
    width: 100%;
    font-size: 23px;
    text-align: center;
    border-style: none;
  }
  .form-errors {
    text-align: center;
    color: #fff;
  }
  .form-error {
    padding-top: 5px;
  }
  .has-error {
    border-bottom: 2px solid red;
  }
  .button {
    padding-left: 25px;
    padding-right: 25px;
  }
}
.request-view {
  #explanation {
    margin: 96px auto 25px;
  }
  #button-container {
    text-align: center;
  }
  .button {
    border: none;
    color: $brand-color;    
  }
  #error {
    margin: 15px auto 0;
  }
}

// Search
.search-bar {
  i {
    position: absolute;
    padding: 13px 16px;
    color: #aaa;
  }
  input {
    width: 100%;
    border: none;
    border-top: 1px solid #e6e6e6;
    border-bottom: 1px solid #e6e6e6;
    padding: 10px 39px;
    margin-top: -1px;
    margin-bottom: 1px;
    font-size: 16px;
    border-radius: 0 !important;
    -webkit-appearance: none; // remove the inset on ios
  }
  .fa-times {
    top: 0;
    right: 0;
    font-size: 16px;
  }
}
.no-results {
  text-align: center;
  margin-top: 10px;
  color: #777;
}

// Place search
.pac-container {
  box-shadow: none;
  border: none;
  border-top: none;

  &::after {
    margin-top: 10px;
    margin-right: 5px;
  }
}
.pac-item {
  border-top: none;
  border-bottom: 1px solid #e6e6e6;
  padding: 7px 14px;
  font-family: $font-family-sans-serif;
  font-size: 13px;
}
.pac-icon {
  margin-right: 10px;
}
.pac-item-query {
  font-size: 16px;
}

// Navbar
#nav-logo {
  font-family: 'Carter One', 'Helvetica Neue', sans-serif;
  font-size: 30px;
}
.back-button {
  padding-left: 3px !important;
}
.bar-header {
  border-bottom-width: 0 !important;
  border-bottom-color: transparent !important;
  background-image: none;
  border-bottom: 1px solid darken($brand-color, 12%) !important;
}
.hide-nav-bottom-border {
  .bar-header {
    border-bottom: 0 !important;
  }
}
ion-nav-back-button {
  display: none;
}

.bar {
  background-color: $brand-color;

  .title {
    color: #fff;
    font-size: 23px;
  }
  i { 
    color: #fff;
  }
}
#event-title {
  span {
    display: inline-block;
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    max-width: calc(100% - 20px);
  }
  i {
    position: relative;
    padding-left: 2px;
    font-size: 18px;
    top: -14px !important;
  }
}
#create-event-nav {
  font-size: 20px;
}
.platform-ios {
  #event-title {
    i {
      top: 0;
    }
  }
}

// Event
.platform-ios {
  #expanded-header {
    // Offset for ios-status-bar
    top: $bar-height + $ios-statusbar-height !important;
  }
}

// Events
.platform-ios {
  #events {
    #event-comment {
      & > i {
        margin-right: 28px;
      }
    }
  }
}

// Friendship Buttons
.friendship-button {
  .fa-plus-square-o {
    color: #aaa;
  }
  .fa-check-square {
    color: $brand-color;
  }
  .spinner {
    fill: #aaa;
    stroke: #aaa;
  }
}

// Alerts
.ng-toast {
  position: absolute;
  width: 100%;
  margin-top: 0;
  z-index: 12;
}
.platform-ios {
  .ng-toast {
    // Offset for iOS status bar
    margin-top: $ios-statusbar-height;
  }
}
.alert {
  background-color: #2a2c2e;
  color: #fff;
  padding: 15px;
  padding-right: 30px;
}
.close {
  position: relative;
  top: -8px;
  right: -32px;
  color: #fff;
  float: right;
  font-weight: bold;
  font-size: 21px;
  background: transparent;
  border: 0;
  width: 45px;
}

// Spinner
.scroll-refresher,
#spinner-container {
  .spinner {
    stroke: #666666;
    fill: #666666;
  }
}

// Permission denied
.permission-denied {
  text-align: center;
  color: $brand-color;
  padding-top: 100px;
  font-size: 16px;
  line-height: 18px;

  .message {
    margin: 0 auto 24px;
    max-width: 216px;

    &.instructions {
      font-weight: 900;
      max-width: none;
    }
  }
  i {
    margin-left: 5px;
    margin-right: 5px;
  }
}

// Popup
#share-link {
  padding: 7px;
  color: #767676;
  border: 1px solid #ccc;
}

// Messages
.message-item {
  border: none;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 0;
  padding-bottom: 0;

  &:first-child {
    padding-top: 15px;
  }
  &:last-child {
    padding-bottom: 10px;
  }
}
.action-message {
  color: #888;
  font-size: 13px;
  text-align: center;
  margin-top: 5px;
  margin-bottom: 5px;
}
.text-message {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  max-width: 100%;
  margin-top: 3px;
  margin-bottom: 3px;

  .avatar {
    flex-shrink: 0;
    flex-grow: 0;
    z-index: 1;
    height: 36px;
    width: 36px;
    border-radius: 50%;
  }
  .text {
    position: relative;
    background-color: #eee;
    padding-top: 8px;
    padding-bottom: 8px;
    padding-left: 12px;
    padding-right: 12px;
    border-radius: 13px;
    font-weight: lighter;
    max-width: 70%;
    color: #222;
    font-size: 16px;
    font-weight: 400;
    white-space: pre-wrap;

    &::before {
      position: absolute;
      right: auto;
      bottom: .6em;
      left: -12px;
      height: 0;
      content: '';
      border: 6px solid transparent;
      border-right-color: #eee;
      z-index: 2;
    }
  }
  &.mine {
    flex-direction: row-reverse;

    .avatar {
      display: none;
    }
    .text {
      border-top: 1px solid #07f;
      border-bottom: 1px solid #07f;
      background-color: #08f;
      color: #fff;

      &::before {
        right: -12px;
        bottom: .6em;
        left: auto;
        border: 6px solid transparent;
        border-left-color: #08f;
      }
    }
  }
}
.action-message,
.text-message {
  border: none;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 0;
  padding-bottom: 0;
}
.new-message-bar {
  padding: 0;
  height: auto;
  display: block;
  background-image: none;
}
.new-message {
  border: none;
  border-radius: 0;
  width: 100%;
  padding-right: 50px;
  resize: none;
  line-height: 20px;
  max-height: 104px;
  font-size: 15px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
  -webkit-appearance: none; // remove the inset on ios
  border-top: 1px solid #b2b2b2;
}
.send-message {
  position: absolute;
  right: 10px;
  bottom: 5px;
  text-decoration: none;
  font-weight: 700 !important;
  font-size: 16px;
  color: $link-color !important;

  &:disabled {
    color: #999 !important;
  }
}
.platform-ios {
  .new-message {
    border-top: .5px solid #b2b2b2;
  }
}

